openshift/overlays/development/route-patch.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: portfolio
spec:
  host: portfolio-dev.apps.test.mtnn.cloud
